--- a/Hacker_rank/Data_Structure/181028_2D_array.ipynb
+++ b/Hacker_rank/Data_Structure/181028_2D_array.ipynb
@@ -14,16 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -50,80 +41,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1, 1, 1]"
+       "[[1, 1, 1, 0, 0, 0],\n",
+       " [0, 1, 0, 0, 0, 0],\n",
+       " [1, 1, 1, 0, 0, 0],\n",
+       " [0, 0, 2, 4, 4, 0],\n",
+       " [0, 0, 0, 2, 0, 0],\n",
+       " [0, 0, 1, 2, 4, 0]]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "arr[0][:3]"
+    "arr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1"
+       "6"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "arr[1][1]"
+    "len(arr)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 1, 1]"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "arr[2][:3]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "arr[]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np_arr = np.array(arr)"
+    "result = []\n",
+    "for i in range(len(arr)-3+1) :\n",
+    "    for j in range(len(arr)-3+1) : \n",
+    "        first = arr[i][j:3+j]\n",
+    "        second = arr[i+1][1+j]\n",
+    "        third = arr[i+2][j:3+j]\n",
+    "        ans = sum(first) + second + sum(third)\n",
+    "        result.append(ans)\n",
+    "\n",
+    "sorted(result, reverse = True)[0]"
    ]
   }
  ],
